Correct footer spacing ul

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,13 @@ header {
     z-index: +1;
 }
 
+header ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 80px;
+}
+
 .nav-list {
     padding-left: 4rem;
 }
@@ -315,11 +322,10 @@ footer i:hover {
     color: #5e17eb;
 }
 
-ul {
+footer ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 80px;
 }
 
 /* media queries */
